--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <link rel="stylesheet" type="text/css" href="resources/bootstrap.min.css">
-    <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css" rel="stylesheet">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
     <style>
         .menu {
             position: absolute;
@@ -35,22 +35,22 @@
             display: none !important;
         }
     </style>
-    <title>Document</title>
 </head>
 <body>
 <div class="menu">
     <div class="list-menu">
         <a class="list-group-item" href="index.html"><i class="fas fa-home"></i></a>
-        <a class="list-group-item" href="#" onclick="toggleSearch()">
+        <a class="list-group-item" href="#" onfocus="toggleSearch()">
             <i class="fas fa-search"></i>
             <input type="text" id="search" class="hide" placeholder="Search..." onclick="stopEvents()" onblur="toggleSearch()"></a>
-        <a class="list-group-item" href="index.html"><i class="fas fa-heart"></i></a>
+        <a class="list-group-item" href="#" onclick="openFavorites()"><i class="fas fa-heart"></i></a>
         <a class="list-group-item" href="#" onclick="toggleMenu()"><i class="fas fa-cogs"></i></a>
     </div>
 </div>
 <iframe src="http://localhost:8080" id="frame"></iframe>
 </body>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 <script>
     const ipc = require('electron').ipcRenderer;
     window.$ = window.jQuery = require("jquery");
@@ -61,8 +61,18 @@
         frame.src = baseUrl+"settings/"
     });
 
+    function openFavorites() {
+        frame.src = baseUrl+"favorites/"
+    }
+
     function toggleMenu() {
         ipc.send("show-menu");
+    }
+
+    function stopEvents(e){
+        let evt = e || window.event;
+        evt.stopPropagation();
+        evt.preventDefault();
     }
 
     const search = $("#search");
