--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             height: 100vh;
         }
 
-        iframe[src="http://localhost:8080/settings/"] {
+        iframe[src~="/settings/"] {
             width: 90vw;
             margin-left: 10vw;
         }
@@ -47,15 +47,16 @@
         <a class="list-group-item" href="#" onclick="toggleMenu()"><i class="fas fa-cogs"></i></a>
     </div>
 </div>
-<iframe src="http://localhost:8080" id="frame"></iframe>
+<iframe src="http://localhost:26034" id="frame"></iframe>
 </body>
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
 <script>
     const ipc = require('electron').ipcRenderer;
     window.$ = window.jQuery = require("jquery");
     let frame = document.getElementById("frame");
-    const baseUrl = "http://localhost:8080/";
+    const baseUrl = "http://localhost:26034/";
 
     ipc.on("open-settings", function () {
         frame.src = baseUrl+"settings/"
